# livekit-rockchip-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  check-upstream.yml
docs/: PATCHING_GUIDE.md  TROUBLESHOOTING.md
examples/: start_meet.sh  test_mpp_registration.sh
examples/video_call/: Cargo.toml  config.toml
examples/video_call/src/: main.rs
libwebrtc/: CHANGELOG.md
livekit/: CHANGELOG.md
patches/: 001-build-rs-rockchip.patch  002-encoder-factory.patch  003-decoder-factory.patch  004-workspace-video-call.patch  ORIGINAL_README.md  README.md  apply_patches.sh
patches/docs/: SUPPORTED_VERSIONS.md
webrtc-sys/: CHANGELOG.md  build.rs
webrtc-sys/src/: video_decoder_factory.cpp  video_encoder_factory.cpp
