[package]
name = "video_call"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
desktop = []

[[bin]]
name = "video_call"
path = "src/main.rs"
required-features = ["desktop"]

[dependencies]
tokio = { workspace = true, features = ["full", "parking_lot"] }
livekit = { workspace = true, features = ["rustls-tls-native-roots"] }
livekit-api = { workspace = true, features = ["rustls-tls-native-roots"] }
yuv-sys = { workspace = true, features = ["jpeg"] }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

nokhwa = { version = "0.10", default-features = false, features = ["output-threaded"] }

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", default-features = false, features = ["input-v4l"] }
