[package]
name = "video_call"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "video_call"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full", "parking_lot"] }
livekit = { workspace = true, features = ["rustls-tls-native-roots"] }
livekit-api = { workspace = true, features = ["rustls-tls-native-roots"] }
libwebrtc = { workspace = true }
yuv-sys = { workspace = true, features = ["jpeg"] }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
cpal = "0.15"

nokhwa = { version = "0.10", default-features = false, features = ["output-threaded"] }

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", default-features = false, features = ["input-v4l"] }
